# Example-on-Trying-to-compile-OR-Tools-in-Android

./: README.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
